[gd_scene load_steps=4 format=3 uid="uid://qmp68e386kyo"]

[ext_resource type="Script" path="res://entities/weapons/base_gun/base_gun.gd" id="1_lkx6p"]
[ext_resource type="Texture2D" uid="uid://bsgdvn3ka1occ" path="res://entities/weapons/base_gun/assets/base_gun.png" id="2_5tgdy"]
[ext_resource type="Script" path="res://entities/components/orientation_component.gd" id="3_2ehtq"]

[node name="BaseGun" type="Node2D" node_paths=PackedStringArray("bullet_spawn_point")]
script = ExtResource("1_lkx6p")
bullet_spawn_point = NodePath("Sprite2D/BulletSpawnPoint")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -1)
texture = ExtResource("2_5tgdy")

[node name="BulletSpawnPoint" type="Marker2D" parent="Sprite2D"]
position = Vector2(8, -1)

[node name="CooldownTimer" type="Timer" parent="."]

[node name="OrientationComponent" type="Node" parent="."]
script = ExtResource("3_2ehtq")
